Made a utils library.

--- a/js-fakes-training.ipynb
+++ b/js-fakes-training.ipynb
@@ -8,359 +8,21 @@
    "source": [
     "from wandb.keras import WandbCallback\n",
     "import wandb\n",
-    "from glob import glob\n",
     "from tqdm import tqdm\n",
-    "from typing import List\n",
-    "from tensorflow.keras import Model\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import LSTM, Dense, BatchNormalization, Embedding, Dropout, concatenate, Input\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from tensorflow.keras.utils import plot_model\n",
-    "import pretty_midi\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import yaml\n",
     "import random\n",
     "import os\n",
-    "import pickle\n",
     "\n",
-    "config = yaml.safe_load(open('config.yaml', 'r'))\n",
-    "pathes = config['path']\n",
-    "params = config['params']\n",
-    "outputs = config['output']\n",
-    "params['beat_duration'] = 1/(params['bpm']/60)"
+    "from utils import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NoteData(pretty_midi.Note):\n",
-    "\n",
-    "    def __init__(self, velocity, pitch, start, end, sustain):\n",
-    "        super().__init__(velocity, pitch, start, end)\n",
-    "        self.sustain = 1 if sustain else 0\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def decode(data, start, velocity=90):\n",
-    "        '''\n",
-    "        Return (`pretty_midi.Note`, sustain)\n",
-    "        '''\n",
-    "        data = data.split('-')\n",
-    "        pitch = int(data[0])\n",
-    "        duration = float(data[1])\n",
-    "        end = start+duration\n",
-    "\n",
-    "        return pretty_midi.Note(velocity, pitch, start, end), int(data[2])\n",
-    "\n",
-    "    def encode(self):\n",
-    "        return f'{self.pitch}-{self.get_duration()}-{self.sustain}'\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        # return f'Note(start={self.start}, end={self.end}, pitch={self.pitch}, velocity={self.velocity}, sustain={self.sustain})'\n",
-    "        return f'NoteData(pitch={self.pitch}, duration={self.get_duration()}, sustain={self.sustain}, enc={self.encode()})'\n",
-    "\n",
-    "\n",
-    "def checkIntervals(beat: List[NoteData], start: float, end: float):\n",
-    "    '''\n",
-    "    Pass a list of encoded beat string. Returns a list of note off intervals.\n",
-    "    '''\n",
-    "\n",
-    "    beat = beat.copy()\n",
-    "    beat.insert(0, NoteData(90, 0, None, start, 1))\n",
-    "    beat.append(NoteData(90, 0, end, None, 1))\n",
-    "    intervals = []\n",
-    "    for i in range(1, len(beat)):\n",
-    "        note_time_interval = beat[i].start-beat[i-1].end\n",
-    "        if(note_time_interval > 0):\n",
-    "            intervals.append([beat[i-1].end, beat[i].start])\n",
-    "        elif(note_time_interval < 0):\n",
-    "            print(\"Error! Minus note interval, is there any overlapping note exist?\")\n",
-    "\n",
-    "    return intervals\n",
-    "\n",
-    "\n",
-    "def expandNoteList(notes):\n",
-    "\n",
-    "    # First note on time, in second\n",
-    "    midiStartTime = notes[0].start\n",
-    "    # Last note off time, in second\n",
-    "    midiEndTime = notes[-1].end\n",
-    "    # How many beats in this note list. One in 4/4.\n",
-    "    beatNum = int((midiEndTime-midiStartTime)/params['beat_duration'])\n",
-    "\n",
-    "    lastPitch = None\n",
-    "    totalNoteDataList = []\n",
-    "    for beatIndex in range(beatNum):\n",
-    "        # Get start and end time in this beat.\n",
-    "        start = midiStartTime + beatIndex*params['beat_duration']\n",
-    "        end = midiStartTime + (beatIndex+1)*params['beat_duration']\n",
-    "\n",
-    "        # Find notes that cover this beat interval.\n",
-    "        coveredNotes = [note for note in notes if (note.start < end)]\n",
-    "        coveredNotes = [note for note in coveredNotes if (note.end > start)]\n",
-    "\n",
-    "        # encodedBeatList = []\n",
-    "        noteDataList = []\n",
-    "        for note in coveredNotes:\n",
-    "            sustain = (note.pitch != lastPitch or note.start < start)\n",
-    "\n",
-    "            # Clip the note start and end time.\n",
-    "            noteStart = start if note.start <= start else note.start\n",
-    "            noteEnd = end if note.end >= end else note.end\n",
-    "\n",
-    "            # Add a new NoteData object to the list.\n",
-    "            noteData = NoteData(90, note.pitch, noteStart, noteEnd, sustain)\n",
-    "            noteDataList.append(noteData)\n",
-    "            lastPitch = note.pitch\n",
-    "\n",
-    "        # Check if there is any interval between notes, cause it won't count\n",
-    "        # any note off intervals as a Note.\n",
-    "        intervals = checkIntervals(noteDataList, start, end)\n",
-    "        if intervals:\n",
-    "            for interval in intervals:\n",
-    "                # We add a pitch 0 Note object to mark as rest.\n",
-    "                noteData = NoteData(90, 0, interval[0], interval[1], 1)\n",
-    "                noteDataList.append(noteData)\n",
-    "\n",
-    "        # Sort the list base on start time, so the list will stay as time series.\n",
-    "        noteDataList.sort(key=lambda x: x.start)\n",
-    "\n",
-    "        totalNoteDataList.append(noteDataList)\n",
-    "\n",
-    "    return totalNoteDataList\n",
-    "\n",
-    "\n",
-    "def encodeExpandedNoteList(expandedNoteDataList: List[List[NoteData]]):\n",
-    "    '''\n",
-    "    Takes the expanded note list and encode each NoteData object.\n",
-    "\n",
-    "    Returns a dataset ready encoded note representation.\n",
-    "    '''\n",
-    "    encodedBeatList = []\n",
-    "    for expandedNoteData in expandedNoteDataList:\n",
-    "        encodedBeatList.append('#'.join([noteData.encode() for noteData in expandedNoteData]))\n",
-    "    return encodedBeatList\n",
-    "\n",
-    "\n",
-    "def decodeBeatList(encodedBeatList):\n",
-    "    '''\n",
-    "    Decode beat from encoded music sequence. \n",
-    "\n",
-    "    Returns note list that can use in `pretty_midi.Instrument.notes`.\n",
-    "    '''\n",
-    "\n",
-    "    timestamp = 0\n",
-    "    decodedNoteDataList = []\n",
-    "    for beat in encodedBeatList:\n",
-    "        encodedNotes = beat.split('#')\n",
-    "        for encodedNote in encodedNotes:\n",
-    "            decodedNote, sustain = NoteData.decode(encodedNote, timestamp)\n",
-    "            decodedNoteDataList.append((decodedNote, sustain))\n",
-    "            timestamp += decodedNote.get_duration()\n",
-    "\n",
-    "    decodedNoteList = []\n",
-    "    lastPitchAndSustain = (-1, -1)\n",
-    "    for decodedNote, sustain in decodedNoteDataList:\n",
-    "        if decodedNote.pitch == 0:\n",
-    "            pass\n",
-    "        elif decodedNote.pitch == lastPitchAndSustain[0] and sustain:\n",
-    "            decodedNoteList[-1].end = decodedNote.end\n",
-    "        else:\n",
-    "            decodedNoteList.append(decodedNote)\n",
-    "\n",
-    "        lastPitchAndSustain = (decodedNote.pitch, sustain)\n",
-    "\n",
-    "    return decodedNoteList\n",
-    "\n",
-    "\n",
-    "def generateMidi(filename: str, tracks: List[List[str]], programName: str = 'Acoustic Grand Piano'):\n",
-    "    '''\n",
-    "    tracks `List[List[str]]`:\n",
-    "        Encoded beat sequence. [['70-0.5-1', '68-0.25-1#70-0.25-1'..], ...]\n",
-    "\n",
-    "    Write the midi file from encoded tracks.\n",
-    "\n",
-    "    '''\n",
-    "    midi = pretty_midi.PrettyMIDI()\n",
-    "    for index, track in enumerate(tracks):\n",
-    "        _instrument = pretty_midi.Instrument(\n",
-    "            pretty_midi.instrument_name_to_program(programName), False, f\"Track {index+1}\")\n",
-    "        _instrument.pitch_bends.append(pretty_midi.PitchBend(0, 0))\n",
-    "        _instrument.notes = decodeBeatList(track)\n",
-    "        midi.instruments.append(_instrument)\n",
-    "\n",
-    "    midi.write(filename)\n",
-    "\n",
-    "\n",
-    "def loadMidiInFolder(path, pkl):\n",
-    "    '''\n",
-    "    path:\n",
-    "        path for glob to grab midi. Must include last file name like `*.mid`.\n",
-    "\n",
-    "    Return tracks read from midi, Note has been encoded to string.\n",
-    "    '''\n",
-    "    wordsList = []\n",
-    "    if os.path.exists(pkl):\n",
-    "        with open(pkl, 'rb') as f:\n",
-    "            wordsList = pickle.load(f)\n",
-    "    else:\n",
-    "        for mid in tqdm(glob(path, recursive=True)):\n",
-    "            try:\n",
-    "                midiData = pretty_midi.PrettyMIDI(mid)\n",
-    "            except:\n",
-    "                print(\"Cannot load this midi\")\n",
-    "                continue\n",
-    "\n",
-    "            tracks = [instrument.notes for instrument in midiData.instruments]\n",
-    "            encodedTracks = [encodeExpandedNoteList(expandNoteList(track)) for track in tracks]\n",
-    "            wordsList.append(encodedTracks)\n",
-    "        with open(pkl, 'wb') as f:\n",
-    "            pickle.dump(wordsList, f)\n",
-    "\n",
-    "    return wordsList\n",
-    "\n",
-    "\n",
-    "def concatMidi(data):\n",
-    "    '''\n",
-    "    data:\n",
-    "        trainDataRaw or testDataRaw, will concatenate each track.\n",
-    "\n",
-    "    Returns np.array (4, total_length)\n",
-    "    '''\n",
-    "\n",
-    "    concatData = None\n",
-    "    for mid in data:\n",
-    "        if concatData == None:\n",
-    "            concatData = mid\n",
-    "        else:\n",
-    "            for i in range(len(concatData)):\n",
-    "                concatData[i] += mid[i]\n",
-    "\n",
-    "    return np.array(concatData)\n",
-    "\n",
-    "\n",
-    "def __split_input_target(chunk):\n",
-    "    '''\n",
-    "    Split x and y for training, in our case, x is the current word, y is the next word.\n",
-    "    '''\n",
-    "    input_text = chunk[:-1]\n",
-    "    target_text = tf.one_hot(chunk[1:], params['current_vocab_size'])\n",
-    "    return input_text, target_text\n",
-    "\n",
-    "\n",
-    "def makeDataset(data, track):\n",
-    "    '''\n",
-    "    data:\n",
-    "        1-d list.\n",
-    "    track:\n",
-    "        specify the track number to get correct vocab_size.\n",
-    "\n",
-    "    Make a tf dataset from a 1-d array.\n",
-    "\n",
-    "    It will batch for `sequence_length` to split each sentence. \n",
-    "    Then map it to x, y. Finally batch to the batch size we set.\n",
-    "\n",
-    "    Returns a BatchDataset.\n",
-    "    '''\n",
-    "    dataset = tf.data.Dataset.from_tensor_slices(data)\n",
-    "    dataset = dataset.batch(params['sequence_length']+1, drop_remainder=True)\n",
-    "    params['current_vocab_size'] = params['vocab_size'][track]\n",
-    "    dataset = dataset.map(__split_input_target)\n",
-    "    del params['current_vocab_size']\n",
-    "    dataset = dataset.shuffle(10000).batch(params['batch_size'], drop_remainder=True)\n",
-    "    return dataset\n",
-    "\n",
-    "\n",
-    "def makeSingleTrackModel(track, batch_size=params['batch_size']):\n",
-    "    '''\n",
-    "    Create `Model` object for single track training.\n",
-    "    '''\n",
-    "\n",
-    "    model = Sequential()\n",
-    "    model.add(Embedding(params['vocab_size'][track], output_dim=params['embed_size'],\n",
-    "                        batch_input_shape=(batch_size, None)))\n",
-    "    for _ in range(params['layers']):\n",
-    "        model.add(LSTM(params['unit'], return_sequences=True, stateful=params['stateful'],\n",
-    "                       dropout=params['dropout'], recurrent_dropout=params['dropout']))\n",
-    "\n",
-    "    model.add(Dense(params['unit'], activation='relu'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Dropout(params['dropout']))\n",
-    "    model.add(Dense(params['vocab_size'][track], activation='softmax'))\n",
-    "    model.compile(loss=CategoricalCrossentropy(from_logits=False),\n",
-    "                  optimizer=Adam(learning_rate=0.0001), metrics=['acc'])\n",
-    "\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "def makeLSTMLayer(name, track, batch_size=params['batch_size']):\n",
-    "    '''\n",
-    "    Make input embedding, LSTM layers of multi track model.\n",
-    "    '''\n",
-    "\n",
-    "    inputLayer = Input(batch_input_shape=([batch_size, None]))\n",
-    "    embedLayer = Embedding(params['vocab_size'][track],\n",
-    "                           params['embed_size'], name=name+'-embed')(inputLayer)\n",
-    "    lstmLayer = LSTM(params['unit'], return_sequences=True, stateful=params['stateful'],\n",
-    "                     dropout=params['dropout'], recurrent_dropout=params['dropout'], name=name+'-LSTM1')(embedLayer)\n",
-    "    lstmLayer = LSTM(params['unit'], return_sequences=True, stateful=params['stateful'],\n",
-    "                     dropout=params['dropout'], recurrent_dropout=params['dropout'], name=name+'-LSTM2')(lstmLayer)\n",
-    "\n",
-    "    return inputLayer, lstmLayer\n",
-    "\n",
-    "\n",
-    "def makeOutputLayer(name, layer, track):\n",
-    "    '''\n",
-    "    Make output combined linear dense layers of multi track model.\n",
-    "    '''\n",
-    "\n",
-    "    outputLayer = layer\n",
-    "    # outputLayer = Dense(params['unit'], activation='relu', name=name+'-linear2')(layer)\n",
-    "    # outputLayer = BatchNormalization()(outputLayer)\n",
-    "    # outputLayer = Dropout(params['dropout'])(outputLayer)\n",
-    "    outputLayer = Dense(params['vocab_size'][track], activation='softmax',\n",
-    "                        name=name+'-output')(outputLayer)\n",
-    "\n",
-    "    return outputLayer\n",
-    "\n",
-    "\n",
-    "def makeMultiTrackModel(batch_size=params['batch_size']):\n",
-    "    '''\n",
-    "    Create `Model` object for multi track training. \n",
-    "    '''\n",
-    "\n",
-    "    inputLayer1, lstmLayer1 = makeLSTMLayer('input1', 0, batch_size)\n",
-    "    inputLayer2, lstmLayer2 = makeLSTMLayer('input2', 1, batch_size)\n",
-    "    inputLayer3, lstmLayer3 = makeLSTMLayer('input3', 2, batch_size)\n",
-    "    inputLayer4, lstmLayer4 = makeLSTMLayer('input4', 3, batch_size)\n",
-    "\n",
-    "    concatLayers = concatenate([lstmLayer1, lstmLayer2, lstmLayer3, lstmLayer4])\n",
-    "\n",
-    "    x = LSTM(params['unit'], return_sequences=True, name='concatLSTMLayer1')(concatLayers)\n",
-    "    # x = Dropout(params['dropout'])(x)\n",
-    "    # x = LSTM(params['unit'], return_sequences=True, name='concatLSTMLayer2')(x)\n",
-    "    x = Dense(params['unit'], activation='relu', name='concatLinear1')(x)\n",
-    "    x = BatchNormalization()(x)\n",
-    "    x = Dropout(params['dropout'])(x)\n",
-    "\n",
-    "    outputLayers = [makeOutputLayer('output'+str(i), x, i) for i in range(params['track_size'])]\n",
-    "\n",
-    "    model = Model(inputs=[inputLayer1, inputLayer2, inputLayer3, inputLayer4], outputs=outputLayers)\n",
-    "\n",
-    "    model.compile(loss=CategoricalCrossentropy(from_logits=False),\n",
-    "                  optimizer=Adam(learning_rate=0.0001), metrics=['acc'])\n",
-    "\n",
-    "    return model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +73,7 @@
        "[1499, 1499, 1499, 1499]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +154,8 @@
    "source": [
     "name = 'single-track-lstm-training'\n",
     "track = 0\n",
-    "model = makeSingleTrackModel(track)"
+    "model = makeSingleTrackModel(track)\n",
+    "fig = plot_model(model, to_file=name+'.png', show_layer_names=True, show_shapes=True)"
    ]
   },
   {
@@ -634,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,20 +307,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 16)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "initBeat.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layer lstm_4 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+      "WARNING:tensorflow:Layer lstm_5 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:00<00:00, 70.71it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "weight = 'model-single-track-lstm-training-2-496-1.3643.hdf5'\n",
+    "weight = 'model-single-track-lstm-training-05-4.0770.hdf5'\n",
     "\n",
     "model = makeSingleTrackModel(track, 1)\n",
     "model.build(tf.TensorShape([1, None]))\n",
@@ -686,6 +376,15 @@
     "\n",
     "    pred = model(np.array([[next_beat]]))\n",
     "    pred = tf.expand_dims(pred, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generateMidi(name+'.mid', [music_sequence])"
    ]
   },
   {
@@ -778,8 +477,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "generateMidi(name+'.mid', [music_sequence])"
+    "fig = plot_model(model, to_file=name+'.png', show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -787,9 +493,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plot_model(model, to_file=name+'.png', show_shapes=True, show_layer_names=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
